--- a/亚克力吸塑灯箱.html
+++ b/亚克力吸塑灯箱.html
@@ -3,13 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>古月·亚克力吸塑灯箱门头提示词生成器</title>
+
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:"Microsoft YaHei",sans-serif;}
+
 body{
   background: linear-gradient(135deg,#FCFCFD 0%,#F5F7FA 100%);
   min-height:100vh;
   padding:20px 0 60px;
 }
+
 /* 顶部标题栏 */
 .header{
   width:100%;
@@ -21,8 +24,9 @@ body{
   border-radius:0 0 16px 16px;
   box-shadow:0 4px 16px rgba(37,99,235,0.12);
 }
-.header h1{font-size:28px;margin-bottom:8px;}
-.header p{font-size:15px;opacity:0.9;}
+.header h1{font-size:26px;margin-bottom:8px;}
+.header p{font-size:14px;opacity:0.9;}
+
 /* 输入区域 */
 .input-wrap{
   max-width:800px;
@@ -32,7 +36,12 @@ body{
   border-radius:16px;
   box-shadow:0 6px 20px rgba(0,0,0,0.05);
 }
-.label{font-size:16px;color:#1F2937;font-weight:500;margin-bottom:10px;}
+.label{
+  font-size:16px;
+  color:#1F2937;
+  font-weight:500;
+  margin-bottom:10px;
+}
 .input-box{
   width:100%;
   padding:15px 20px;
@@ -43,7 +52,10 @@ body{
   transition:0.2s;
   margin-bottom:20px;
 }
-.input-box:focus{border-color:#2563EB;box-shadow:0 0 0 4px rgba(37,99,235,0.1);}
+.input-box:focus{
+  border-color:#2563EB;
+  box-shadow:0 0 0 4px rgba(37,99,235,0.1);
+}
 .gen-btn{
   width:100%;
   padding:16px;
@@ -56,8 +68,16 @@ body{
   cursor:pointer;
   transition:0.3s;
 }
-.gen-btn:hover{transform:translateY(-2px);box-shadow:0 8px 16px rgba(37,99,235,0.15);}
-.gen-btn:disabled{background:#93C5FD;cursor:not-allowed;transform:none;}
+.gen-btn:hover{
+  transform:translateY(-2px);
+  box-shadow:0 8px 16px rgba(37,99,235,0.15);
+}
+.gen-btn:disabled{
+  background:#93C5FD;
+  cursor:not-allowed;
+  transform:none;
+}
+
 /* 结果区域 */
 .result-wrap{
   max-width:800px;
@@ -76,7 +96,12 @@ body{
   align-items:flex-start;
   gap:15px;
 }
-.item-text{flex:1;font-size:14px;line-height:1.6;color:#374151;}
+.item-text{
+  flex:1;
+  font-size:14px;
+  line-height:1.6;
+  color:#374151;
+}
 .copy-btn{
   padding:8px 12px;
   background:#2563EB;
@@ -88,9 +113,15 @@ body{
   white-space:nowrap;
   transition:0.2s;
 }
-.copy-btn:hover{background:#1D4ED8;}
-.copy-btn.copied{background:#CCCCCC !important;color:#666666 !important;cursor:default !important;}
-/* 一键复制全部 */
+.copy-btn:hover{
+  background:#1D4ED8;
+}
+.copy-btn.copied{
+  background:#CCCCCC !important;
+  color:#666 !important;
+  cursor:default !important;
+}
+
 .copy-all-btn{
   display:block;
   margin:20px auto 0;
@@ -101,88 +132,135 @@ body{
   border-radius:8px;
   font-size:15px;
   cursor:pointer;
+  transition:0.2s;
 }
-.copy-all-btn:hover{background:#1D4ED8;}
+.copy-all-btn:hover{
+  background:#1D4ED8;
+}
 </style>
 </head>
+
 <body>
 
-<!-- 顶部标题 -->
 <div class="header">
   <h1>🪟 古月·亚克力吸塑灯箱门头提示词生成器</h1>
-  <p>白天正立面｜夜晚发光｜门头异形｜字体多版本｜8K写实｜100%可施工</p>
+  <p>白天正立面｜夜晚发光｜异形结构｜8K写实｜100%可施工</p>
 </div>
 
-<!-- 输入区域 -->
 <div class="input-wrap">
   <div class="label">请输入店铺行业类型（必填）</div>
-  <input type="text" class="input-box" id="industryInput" placeholder="例如：餐饮美食、奶茶咖啡、美容美发、服装零售、便利店、教育培训">
-  <button class="gen-btn" id="genBtn" onclick="generatePrompts()">🚀 生成20组提示词</button>
+  <input type="text" class="input-box" id="industryInput"
+  placeholder="例如：餐饮美食、奶茶咖啡、美容美发、服装零售、便利店、教育培训">
+  <button class="gen-btn" id="genBtn" onclick="generatePrompts()">
+  🚀 生成20组提示词
+  </button>
 </div>
 
-<!-- 结果展示区域 -->
 <div class="result-wrap" id="resultWrap"></div>
 
 <script>
 let allPrompts = [];
 
-function createPrompt(industry, index){
-  const timeVariants=["白天自然光","夜晚发光灯箱效果","黄昏柔光下"];
-  const shapeVariants=["标准矩形灯箱","弧形异形灯箱","波浪形灯箱","立体雕刻造型灯箱","自由造型吸塑门头"];
-  const fontVariants=["圆体字体","黑体字体","手写体字体","衬线体字体","个性创意字体"];
-  const sloganVariants=[
-    "主营品类+简洁醒目标语","特色品类+清晰易记标语","招牌品类+直观吸睛标语",
-    "核心品类+简洁有力标语","爆款品类+明了易懂标语"
-  ];
-
-  const time=timeVariants[Math.floor(Math.random()*timeVariants.length)];
-  const shape=shapeVariants[Math.floor(Math.random()*shapeVariants.length)];
-  const font=fontVariants[Math.floor(Math.random()*fontVariants.length)];
-  const slogan=sloganVariants[index % sloganVariants.length];
-
-  return `${time}，门头正立面，完整展示，正面平视视角，无透视畸变，${shape}，亚克力吸塑灯箱，整体发光，${industry}店铺门头，亚克力吸塑面板、吸塑灯箱、LED内置光源、金属边框、烤漆底板、亚克力发光字，品牌店名+${slogan}，${font}，立体吸塑部位高亮通透，8K高清，商业写实效果图，细节丰富，色彩自然，可直接施工参考`;
+// 优化随机函数，增加空数组保护
+function random(arr) {
+  if (!arr || arr.length === 0) return "";
+  return arr[Math.floor(Math.random() * arr.length)];
 }
 
-function copySingle(text, btn){
-  navigator.clipboard.writeText(text).then(()=>{
-    btn.classList.add('copied');
-    btn.textContent="已复制";
+// 生成单条提示词核心逻辑
+function createPrompt(industry) {
+  const time = ["白天自然光","夜晚发光灯箱效果","黄昏柔光氛围","商业街实景环境"];
+  const shape = ["标准矩形灯箱","弧形异形灯箱","波浪形灯箱","立体雕刻造型","自由曲线造型"];
+  const material = ["亚克力吸塑面板","LED内置光源","金属边框","烤漆底板","亚克力发光字"];
+  const font = ["圆体字体","黑体字体","手写体字体","衬线体字体","创意个性字体"];
+  const slogan = ["主营品类+醒目标语","核心产品+吸睛标语","爆款单品+强识别口号","特色品类+简洁标语"];
+
+  return `${random(time)}，门头正立面完整展示，正面平视无透视畸变，${random(shape)}，${industry}店铺门头设计，${random(material)}、${random(material)}、${random(material)}，品牌店名+${random(slogan)}，${random(font)}，立体吸塑高亮通透，8K高清，商业写实效果图，细节真实，色彩自然，可直接施工参考`;
+}
+
+// 复制单条提示词的独立函数（优化体验）
+function copySinglePrompt(prompt, btn) {
+  // 增加复制失败的异常捕获
+  navigator.clipboard.writeText(prompt).then(() => {
+    btn.innerText = "已复制";
+    btn.classList.add("copied");
+    // 3秒后恢复按钮状态，提升体验
+    setTimeout(() => {
+      btn.innerText = "复制";
+      btn.classList.remove("copied");
+    }, 3000);
+  }).catch(err => {
+    alert("复制失败，请手动复制！错误：" + err);
   });
 }
 
-function copyAll(){
-  const allText=allPrompts.join("\n\n");
-  navigator.clipboard.writeText(allText).then(()=>{alert("✅ 已成功复制全部20组提示词！");});
-}
+// 生成20组提示词主函数
+function generatePrompts() {
+  const industry = document.getElementById("industryInput").value.trim();
+  const resultWrap = document.getElementById("resultWrap");
+  const genBtn = document.getElementById("genBtn");
 
-function generatePrompts(){
-  const industry=document.getElementById("industryInput").value.trim();
-  const genBtn=document.getElementById("genBtn");
-  const resultWrap=document.getElementById("resultWrap");
+  // 输入校验
+  if (!industry) {
+    alert("请输入行业类型（如：餐饮美食、奶茶咖啡等）");
+    return;
+  }
 
-  if(!industry){alert("请输入店铺行业类型（如：餐饮美食、奶茶咖啡、便利店等）");return;}
+  // 按钮状态更新
+  genBtn.disabled = true;
+  genBtn.textContent = "正在生成...";
+  resultWrap.innerHTML = "";
+  allPrompts = [];
 
-  genBtn.disabled=true;
-  genBtn.textContent="正在生成...";
-  resultWrap.innerHTML="";
-  allPrompts=[];
-
-  setTimeout(()=>{
-    let resultHtml="";
-    for(let i=0;i<20;i++){
-      const prompt=createPrompt(industry,i);
+  // 模拟异步生成，避免页面卡顿
+  setTimeout(() => {
+    // 循环生成20组提示词
+    for(let i = 0; i < 20; i++) {
+      const prompt = createPrompt(industry);
       allPrompts.push(prompt);
-      resultHtml+=`
-      <div class="result-item">
-        <div class="item-text">${i+1}. ${prompt}</div><div class="item-text">${i+1}. ${提示}</div>
-        <button class="copy-btn" onclick="copySingle('${prompt.replace(/'/g,"&apos;")}',this)">复制</button>
-      </div>`;
+
+      // 创建单条结果DOM
+      const item = document.createElement("div");
+      item.className = "result-item";
+
+      const textDiv = document.createElement("div");
+      textDiv.className = "item-text";
+      textDiv.innerText = (i + 1) + ". " + prompt;
+
+      const copyBtn = document.createElement("button");
+      copyBtn.className = "copy-btn";
+      copyBtn.innerText = "复制";
+      // 绑定复制事件（用闭包确保每个按钮对应正确的提示词）
+      copyBtn.onclick = (function(p) {
+        return function() {
+          copySinglePrompt(p, this);
+        };
+      })(prompt);
+
+      item.appendChild(textDiv);
+      item.appendChild(copyBtn);
+      resultWrap.appendChild(item);
     }
-    resultHtml+=`<button class="copy-all-btn" onclick="copyAll()">📋 一键复制全部20组</button>`;
-    resultWrap.innerHTML=resultHtml;
-    genBtn.disabled=false;
-    genBtn.textContent="🚀 生成20组提示词";
-  },800);
+
+    // 创建一键复制全部按钮
+    const copyAllBtn = document.createElement("button");
+    copyAllBtn.className = "copy-all-btn";
+    copyAllBtn.innerText = "📋 一键复制全部20组";
+    copyAllBtn.onclick = function() {
+      navigator.clipboard.writeText(allPrompts.join("\n\n")).then(() => {
+        alert("✅ 已成功复制全部20组提示词！");
+      }).catch(err => {
+        alert("全部复制失败，请手动复制！错误：" + err);
+      });
+    };
+
+    resultWrap.appendChild(copyAllBtn);
+
+    // 恢复生成按钮状态
+    genBtn.disabled = false;
+    genBtn.textContent = "🚀 生成20组提示词";
+
+  }, 500);
 }
 </script>
 
